<resources>
    <string name="app_name">Xilium-Android</string>
    <string name="disconnect">Déconnexion</string>
    <string name="se_connecter">Se connecter</string>
    <string name="ticket">+ Ticket</string>

    <string name="nom_prenom">Nom Prénom</string>
    <string name="new_ticket">Nouveau Ticket</string>
    <string name="objet">Objet</string>
    <string name="categorie">Catégorie</string>
    <string name="category_ex">Logiciel</string>
    <string name="probleme">Problème</string>
    <string name="probleme_ex">Réseau</string>
    <string name="niveau_urgence">Niveau d\'urgence estimé</string>
    <string name="niveau_urgence_ex">moyen</string>
    <string name="description">Description</string>
    <string name="champ_objet">Entrer l\'objet de votre ticket</string>
    <string name="champ_description">Décrivez votre problème</string>
    <string name="creer_ticket">Créer un ticket</string>


    <string name="connection">Connexion</string>
    <string name="email">E-Mail</string>
    <string name="password">Mot de passe</string>
    <string name="mail_ex">arthur.degy@mail.fr</string>
    <string name="password_ex">az****</string>
    <string name="no_e_p">E-mail et mot de passe obligatoire</string>
    <string name="bad_e_p">E-mail ou mot de passe incorrect</string>
    <string name="home">Accueil</string>
    <string name="tab_tick_title">Mes tickets</string>
    <string name="tab_tick_head_1">Objet</string>
    <string name="tab_tick_head_2">Problème</string>
    <string name="tab_tick_head_3">État</string>
    <string name="tick11">Ordinateur ne s\'allume plus</string>
    <string name="tick12">Matériel</string>
    <string name="tick13">En traitement</string>
    <string name="tick21">Mon logiciel crash</string>
    <string name="tick22">Logiciel</string>
    <string name="tick23">Ouvert</string>
    <string name="tick31">Ma chaise grince</string>
    <string name="tick32">Autre</string>
    <string name="tick33">Fermé</string>
    <string name="name">Paul Richard</string>
    
    <string-array name="category">
        <item>Bug</item>
        <item>Fonctionnalité</item>
        <item>Mise-à-jour</item>
        <item>Autre</item>
    </string-array>
    <string-array name="problem">
        <item>Logiciel</item>
        <item>Réseau</item>
        <item>Matériel</item>
        <item>Autre</item>
    </string-array>
</resources>