<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8C1F8"
    tools:context=".TicketActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="407dp"
        android:layout_height="107dp"
        android:background="#E8E8E8"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="190dp"
            android:layout_height="59dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/xilium" />

        <TextView
            android:id="@+id/nom_Prenom"
            android:layout_width="108dp"
            android:layout_height="47dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/nom_prenom"
            android:textAlignment="center"
            android:textSize="16sp" />


    </FrameLayout>

    <TextView
        android:id="@+id/new_Ticket"
        android:layout_width="146dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/new_ticket"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.032" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="382dp"
        android:layout_height="410dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_Ticket"
        app:layout_constraintVertical_bias="0.109">

        <TableRow>

            <TextView
                android:id="@+id/textViewObjet"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/objet"
                android:textSize="18dp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/editTextObjet"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/champ_objet" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/categorie"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/editTextCategory"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/champ_categorie" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewProbleme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/probleme"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/editTextProbleme"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/champ_probleme" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewNiveauUrgence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/niveau_urgence"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/editTextNiveauUrgence"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/champ_niveau_urgence" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/champ_description" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/creer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/creer_ticket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.689" />

</androidx.constraintlayout.widget.ConstraintLayout>